--- a/DPO2_U3_A2_RARP/src/dialogs/ConfirmarBusquedaEmpleado.form
+++ b/DPO2_U3_A2_RARP/src/dialogs/ConfirmarBusquedaEmpleado.form
@@ -95,7 +95,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Se ha encontrado un producto"/>
+            <Property name="text" type="java.lang.String" value="Se ha encontrado un empleado"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="btnAceptar">
